# Hindsight

./: .gitignore  README.md  _cm.txt  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  desktop.spec  desktop_main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260529_2155-06c630362431_initial_schema.py  20260529_2223-144bdd18bc83_add_sync_logs.py  20260529_2226-512bb4dc00a3_add_fx_rates.py  20260529_2230-629afb5668ed_add_cash_accounts_and_flows.py  20260529_2251-8a1aa7d866d0_add_ai_insights.py  20260530_1255-54acac25dd0f_add_watchlist.py  20260530_1301-2dbf9657097c_add_financials.py  20260530_1900-a1b2c3d4e5f6_add_ai_insights.py  20260530_2000-b2c3d4e5f6a7_add_conversations.py  (+3 more)
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py
backend/scripts/: backup.py  seed_stocks.py  seed_universe.py  spike.py
backend/tests/: conftest.py  test_ai_analyze.py  test_ai_budget.py  test_benchmark.py  test_biases.py  test_cash.py  test_concentration.py  test_corporate_actions.py  test_currency.py  test_daily_report_context.py  test_decision_audit.py  test_fees.py  test_financials.py  test_health.py  test_import.py  test_indicators.py  test_insights.py  test_models_decimal.py  test_pnl.py  test_portfolio_api.py  test_portfolio_currency.py  test_price_cache.py  test_quarterly_review.py  test_reminders.py  test_report_jobs.py  test_reports.py  test_returns.py  test_risk.py  test_screener.py  test_sync.py  test_transactions.py  test_watchlist.py
(+205 files in other folders)
